--- a/package.json
+++ b/package.json
@@ -47,6 +47,11 @@
     "webpack-hot-middleware": "^2.13.0"
   },
   "dependencies": {
+    "aframe": "^0.3.0",
+    "aframe-animation-component": "^3.0.4",
+    "aframe-bmfont-text-component": "^0.1.4",
+    "aframe-react": "^3.4.0",
+    "aframe-text-component": "^0.3.0",
     "classnames": "^2.2.5",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
